# epmt

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .pylintrc  Dockerfile  EPMT.ipynb  FRESH.sh  INSTALL.md  Makefile  Outliers-API.ipynb  Outliers.ipynb  Query-API.ipynb  README.md  SLURM.md  TODO  TODO.md  alembic.ini  bitbucket-pipelines.yml  build_and_log.bash  building_notes  clone_and_build.sh  clone_epmt.bash  defaults.py  docker-compose-test.yml  docker-compose.yml  duration_bug.ipynb  epmt  epmt-check-stage-submit.sh  epmt-check.anysh  epmt-example-stage-submit.sh  epmt-example.anysh  epmt-example.bash  epmt-example.csh  epmt-example.sh  epmt-example.tcsh  epmt-job.py  epmt-startstop.py  epmt-unsource.anysh  epmt.spec  (+42 more)
Attic/: TODO.md  bitbucket-ci.yml  scuba.yml
Dockerfiles/: Backup2  Dockerfile  Dockerfile.centos-6-epmt-build  Dockerfile.centos-6-epmt-test  Dockerfile.centos-6-epmt-test-release  Dockerfile.centos-7-epmt-build  Dockerfile.centos-7-epmt-develop  Dockerfile.centos-7-epmt-test  Dockerfile.centos-7-epmt-test-release  Dockerfile.epmt-command  Dockerfile.epmt-dist  Dockerfile.epmt-notebook  Dockerfile.epmt-papiex  Dockerfile.epmt-test  Dockerfile.epmt-test-release-centos-6  Dockerfile.epmt-test.alpine  Dockerfile.epmt-test.centos  Dockerfile.epmt_papiex  Dockerfile.phusion-epmt-build  Dockerfile.phusion-epmt-test  Dockerfile.phusion-epmt-test-release  Dockerfile.python-epmt  Dockerfile.rocky-8-epmt-build  Dockerfile.rocky-8-epmt-test  Dockerfile.rocky-8-epmt-test-release  Dockerfile.sles-11-epmt-build  Dockerfile.sles-15-epmt-build  Dockerfile.sles-15-epmt-test  Dockerfile.sles-15-epmt-test-release  Dockerfile.slurm  Dockerfile.slurm-centos-7  Dockerfile.ubuntu-epmt-build  Dockerfile.ubuntu-epmt-test  Dockerfile.ubuntu-epmt-test-release  NOTYET_Dockerfile.ubuntu-epmt-test  NOTYET_Dockerfile.ubuntu-epmt-test-release
OutliersData/: extract.sh
SLURM/: Dockerfile.slurm  README.md  SLURM.md  settings_slurm_test.py  slurm_task_epilog_epmt.sh  slurm_task_prolog_epmt.sh
docs/: Quickstart.md  RELEASE_NOTES.md  data-migration-study.ipynb  epmt_cmds.md  migrations.md
epmtdocs/: README.md  mkdocs.yml
migrations/: env.py
models/: __init__.py  general.py  logical_model.py  measurement_model.py  orm.py
notebooks/: Graphing-API.ipynb  Outliers.ipynb  Query-API.ipynb  Untitled.ipynb  graphing.ipynb
old/: Outliers-API.ipynb  model.py
orm/: __init__.py  op.py
preset_settings/: settings_pg_container_pony.py  settings_pg_container_sqlalchemy.py  settings_pg_localhost_pony.py  settings_pg_localhost_sqlalchemy.py  settings_slurm_test.py  settings_sqlite_gfdl.py  settings_sqlite_inmem_pony.py  settings_sqlite_inmem_sqlalchemy.py  settings_sqlite_localfile_pony.py  settings_sqlite_localfile_sqlalchemy.py  settings_test_pg_container.py
sample-data/: papiex-1270-0.csv  papiex-1271-0.csv  papiex-1293-0.csv  papiex-1294-0.csv  papiex-1295-0.csv  papiex-1296-0.csv  papiex-1297-0.csv  papiex-1298-0.csv  papiex-1299-0.csv  papiex-1300-0.csv  papiex-1301-0.csv  papiex-1302-0.csv  papiex-1303-0.csv  papiex-1304-0.csv  papiex-1305-0.csv  papiex-1306-0.csv  papiex-1307-0.csv  papiex-1308-0.csv  papiex-1309-0.csv  papiex-1310-0.csv  papiex-1311-0.csv  papiex-1312-0.csv  papiex-1313-0.csv  papiex-1314-0.csv  papiex-1315-0.csv  papiex-1316-0.csv  papiex-1317-0.csv  papiex-1318-0.csv  papiex-1319-0.csv  papiex-1320-0.csv  papiex-1321-0.csv  papiex-1322-0.csv  papiex-1323-0.csv  papiex-1324-0.csv  papiex-1616-0.csv  papiex-1629-0.csv  papiex-1642-0.csv  papiex-1655-0.csv  papiex-1672-0.csv  papiex-1686-0.csv  (+212 more)
sample-output/: papiex-21892-0.csv  papiex-21893-0.csv  papiex-21893-1.csv  papiex-21894-0.csv  (+4052 more)
src/: pyproject.toml  setup.py
src/epmt/: alembic.ini  epmt_cmd_delete.py  epmt_cmd_help.py  epmt_cmd_list.py  epmt_cmd_notebook.py  epmt_cmd_retire.py  epmt_cmd_show.py  epmt_cmds.py  epmt_concat.py  epmt_convert_csv.py  epmt_daemon.py  epmt_default_settings.py  epmt_exp_explore.py  epmt_job.py  epmt_outliers.py  epmt_query.py  epmt_rootcause.py  epmt_settings.py  epmt_settings_test.py  epmt_stat.py  epmt_test.db  epmtlib.py  hackable_epmt_recipe.sh  serve_static.py  settings.py
src/epmt/epmt_migrations/: env.py
src/epmt/epmt_migrations/versions/: 392efb1132ae_baseline.py  4ae9a1cac540_use_biginteger_for_primary_key_of_.py  e703296695bf_create_processes_staging_table.py
src/epmt/orm/: __init__.py  op.py
src/epmt/orm/sqlalchemy/: __init__.py  custom_types.py  general.py  models.py
src/epmt/test/: __init__.py  run  test_anysh.py  test_cmds.py  test_db_migration.py  test_db_schema.py  test_explore.py  test_lib.py  test_outliers.py  test_query.py  test_run.py  test_settings.py  test_shell.py  test_stat.py  test_submit.py
src/epmt/test/data/daemon/ingest/: 692544.tgz
src/epmt/test/data/misc/: corrupted-csv.tgz
src/epmt/test/data/outliers/: kern-6656-20190614-190245.tgz  kern-6656-20190614-191138.tgz
src/epmt/test/data/outliers_nb/: 2444940.tgz  2444943.tgz  2444950.tgz  2444951.tgz  2444953.tgz  2444954.tgz  2444955.tgz  2444957.tgz  2444959.tgz  2460338.tgz  2460339.tgz  2460341.tgz  2460342.tgz  2460343.tgz  2460355.tgz  2460357.tgz  2460358.tgz  2460363.tgz  2460364.tgz  2460365.tgz  2494088.tgz  2494094.tgz  2494095.tgz  2494097.tgz  2494099.tgz  2494108.tgz  2494111.tgz  2494112.tgz  2501762.tgz  2501766.tgz  2501768.tgz  2501771.tgz  2501773.tgz  2501775.tgz  2501776.tgz  2501782.tgz  2501783.tgz  2501786.tgz  2501788.tgz  629322.tgz  (+2 more)
src/epmt/test/data/query_notebook/: 680181.tgz  693147.tgz  696127.tgz  804285.tgz
src/epmt/test/data/submit/: 692500.tgz  804280.tgz
src/epmt/test/data/submit/3455/: perftools.org-papiex.tsv
src/epmt/test/data/tsv/: collated-tsv-2220.tgz
src/epmt/test/data/tsv/12340/: job_metadata  perftools.org-papiex-header.tsv
src/epmt/test/integration/: 001-basic.bats  002-escape.bats  005-concat.bats  010-daemon.bats  012-python.bats  015-annotate.bats  020-explore.bats  025-slurm.bats  030-collate-tsv.bats  050-kernel-compile.bats
src/epmt/test/shell/: epmt-example.csh  epmt-example.sh
src/scripts/: epmt
(+8383 files in other folders)
