[build-system]
# i expect this to work with setuptools ~68 or 69, at worst
requires	= [
		"setuptools >= 61, <69",
		"setuptools_scm[toml] >= 4, <6",
		"wheel >= 0.29.0"
]
build-backend = "setuptools.build_meta"

[project]
name		= "epmt"
version		= "4.10.0"
authors		= [ { name = "Minimal Metrics, LLC", email = "some.where@over.there" } ]
description	= "Experiment Performance Metrics Toolkit"
readme		= "README.md"
requires-python	= ">=3.9"
classifiers	= [    "Programming Language :: Python :: 3", ]
# 20231102 caw: pyinstaller is pinned at 5.7.0, latest version doesn't allow the settings.py tactic.
dependencies	= [ 
 		"alembic",
 		"astroid",
 		"attrs",
 		"backcall",
 		"bleach",
 		"cffi",
 		"combo",
 		"cycler",
 		"decorator",
 		"defusedxml",
 		"docutils",
 		"entrypoints",
 		"Flask",
 		"Flask-Compress",
 		"frozendict",
 		"importlib-metadata",
 		"ipykernel",
 		"ipython",
 		"ipython-genutils",
 		"ipywidgets",
 		"isort",
 		"itsdangerous",
 		"jedi",
 		"Jinja2",
 		"joblib",
 		"jsonschema",
 		"jupyter",
 		"jupyter-client",
 		"jupyter-console",
 		"jupyter-core",
 		"kiwisolver",
 		"kmodes",
 		"kneed",
 		"lazy-object-proxy",
 		"line-profiler",
 		"llvmlite",
 		"lockfile",
 		"Mako",
 		"MarkupSafe",
 		"mccabe",
 		"memory-profiler",
 		"mistune",
 		"mkdocs",
 		"mkdocs-bootstrap4",
 		"more-itertools",
 		"nbconvert",
 		"nbformat",
 		"notebook",
 		"numba",
 		"numexpr",
 		"numpy",
 		"pandas",
 		"pandocfilters",
 		"parso",
 		"patsy",
 		"pexpect",
 		"pickleshare",
 		"plotly",
 		"pony",
 		"prometheus-client",
 		"prompt-toolkit",
 		"psutil",
 		"psycopg2-binary",
 		"ptyprocess",
 		"pycparser",
 		"Pygments",
		"pyinstaller==5.7.0",
 		"pylint",
 		"pyod",
 		"pyparsing",
 		"pyrsistent",
 		"python-daemon",
 		"python-dateutil",
 		"python-editor",
 		"pytz",
 		"pyzmq",
 		"py-cpuinfo",
 		"qtconsole",
 		"scikit-learn",
 		"scipy",
 		"seaborn",
 		"Send2Trash",
 		"six",
 		"SQLAlchemy",
 		"statsmodels",
 		"suod",
 		"terminado",
 		"testpath",
 		"tornado",
 		"traitlets",
 		"typed-ast",
 		"tzlocal",
 		"wcwidth",
 		"webencodings",
 		"werkzeug",
 		"widgetsnbextension",
 		"wrapt",
 		"zipp",
]
[project.urls]
"Homepage"	= "https://gitlab.com/minimal-metrics-llc/epmt/epmt"
"Bug Tracker"	= "https://gitlab.com/minimal-metrics-llc/epmt/epmt/-/issues"
