[build-system]
requires = [
	#"setuptools == 69.0.2"
    "setuptools >= 61, <69",
    "setuptools_scm[toml] >= 4, <6",
    "wheel >= 0.29.0"
]
build-backend = "setuptools.build_meta"

[project]
name            = "epmt"
version         = "4.11.0"
authors         = [ { name = "Minimal Metrics, LLC", email = "some.where@over.there" } ]
description     = "Experiment Performance Metrics Toolkit"
readme          = "README.md"
requires-python = ">=3.9"
classifiers     = [ "Programming Language :: Python :: 3", ]
# 20231102 caw: pyinstaller is pinned at 5.7.0, latest version doesn't allow the settings.py tactic.
dependencies = [
    "alembic",
    "altgraph",
    "appnope",
    "astroid",
    "attrs",
    "backcall",
    "bleach",
    "Brotli",
    "certifi",
    "cffi",
    "charset-normalizer",
    "click",
    "combo",
    "contourpy",
    "cycler",
    "dash",
    "dash-daq",
    "dash-bootstrap-components",
    "dash-table",
    "decorator",
    "defusedxml",
    "Deprecated",
    "docutils",
    "entrypoints",
    "Flask",
    "Flask-Compress",
    "fonttools",
    "frozendict",
    "future",
    "greenlet",
    "idna",
    "importlib-metadata",
    "ipykernel",
    "ipython",
    "ipython-genutils",
    "ipywidgets",
    "isort",
    "itsdangerous",
    "jedi",
    "Jinja2",
    "joblib",
    "jsonschema",
    "jupyter",
    "jupyter-client",
    "jupyter-console",
    "jupyter-core",
    "kiwisolver",
    "kmodes",
    "kneed",
    "lazy-object-proxy",#"line-profiler",
    "livereload",
    "llvmlite",
    "lockfile",
    "lunr",
    "macholib",
    "Mako",
    "Markdown",
    "MarkupSafe",
    "matplotlib",
    "mccabe",#"memory-profiler",
    "mistune",
    "mkdocs",
    "mkdocs-theme-bootstrap4",
    "mkdocs-git-committers-plugin",
    "more-itertools",
    "nbconvert",
    "nbformat",
    "nltk",
    "notebook<7",
    "numba",
    "numexpr",
    "numpy<2",
    "packaging",
    "pandas<2",
    "pandocfilters",
    "parso",
    "patsy",
    "pexpect",
    "pickleshare",
    "Pillow",
    "plotly",#"pony",
    "prometheus-client",
    "prompt-toolkit",
    "psutil",
    "psycopg2-binary",
    "ptyprocess",
    "py-cpuinfo",
    "pycparser",
    "PyGithub",
    "Pygments",

    "PyJWT",
    "PyNaCl",
    "pyod",
    "pyparsing",
    "pyrsistent",
    "python-daemon",
    "python-dateutil",
    "python-editor",
    "pytz",
    "pyYAML",
    "pyzmq",
    "qtconsole",
    "regex",
    "requests",
    "retrying",
    "scikit-learn",
    "scipy",
    "seaborn",
    "Send2Trash",
	"setuptools",
    "six",
    "SQLAlchemy==1.4.54",
    "statsmodels",
    "suod",
    "terminado",
    "testpath",
    "threadpoolctl",
    "tornado",
    "tqdm",
    "traitlets",
    "typed-ast",
    "typing_extensions",
    "tzlocal",
    "urllib3",
    "wcwidth",
    "webencodings",
    "werkzeug",
    "widgetsnbextension",
    "wrapt",
    "zipp",
]
[project.urls]
"Homepage" = "https://gitlab.com/minimal-metrics-llc/epmt/epmt"
"Bug Tracker" = "https://gitlab.com/minimal-metrics-llc/epmt/epmt/-/issues"
